feat: use bootstrap sass directly

--- a/client/scss/_header.scss
+++ b/client/scss/_header.scss
@@ -1,15 +1,71 @@
+.o-toggle {
+  background-color: transparent;
+  cursor: pointer;
+  border: 1px solid transparent;
+  padding: 0;
+  display: inline-block;
+  align-self: stretch;
+
+  .o-header & {  
+    margin-left: -15px;
+  }
+}
 .o-header {
-    background-color: $color-paper;
-    color: $color-black80;
-    border-bottom: 1px solid $color-black20;
-  }
+  background-color: $color-paper;
+  color: $color-black80;
+  border-bottom: 1px solid $color-black20;
+  padding: 0;
+}
+
+#sidebarNav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $color-black90;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
   
-  .navbar-brand,
-  .dropdown-toggle {
-    color: $color-black80;
+  .nav-link {
+    color: #fff;
   }
+}
+
+@include media-breakpoint-up(sm) {
+  .o-header {
+    padding: 0.5rem 0;
+  }
+
+  .o-toggle {
+    .o-header &, #sidebarNav & {
+      display: none;
+    }
+  }
+
+  #sidebarNav {
+    position: static;
+    top: auto;
+    left: auto;
+    background-color: inherit;
+    width: auto;
+    height: auto;
+    z-index: auto;
+    .nav-link {
+      color: $color-teal;
+    }
+    .nav-link:hover {
+      color: $color-black70;
+    }
+  }
+}
   
-  .navbar-brand:hover,
-  .dropdown-toggle:hover {
+.navbar-brand,
+.dropdown-toggle {
+  color: $color-black80;
+
+  &:hover {
     color: $color-black70;
   }
+}
+
+
