--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -23,45 +23,68 @@
   
 </head>
 <body>
-  <header class="navbar navbar-expand o-header">
-    <div class="container">
+  <header class="navbar o-header">
+    <div class="container justify-content-between">
+      
+      <button class="o-toggle" 
+        type="button" 
+        data-toggle="collapse" 
+        data-target="#sidebarNav" 
+        aria-controls="#sidebarNav" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation">
+
+        <svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" height="40" width="40" preserveAspectRatio="none"><title>Menu</title><path d="M768 306.2V383H256v-76.8h512zM256 536.6h512v-76.8H256v76.8zm0 153.6h512v-76.8H256v76.8z" fill-rule="evenodd"/></svg>
+      </button>
+
       <a class="navbar-brand" href="http://www.ftchinese.com" target="__blank">FT中文网</a>
 
       {% if user %}
-      <ul class="navbar-nav"> 
+      <div class="dropdown">
+        <a class="nav-link dropdown-toggle pl-0 pr-0" 
+          href="#" 
+          role="button" 
+          data-toggle="dropdown" 
+          aria-haspopup="true" 
+          aria-expanded="false">myFT</a>
 
-        <li class="nav-item dropdown d-none d-sm-inline">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">myFT</a>
+        <div class="dropdown-menu dropdown-menu-right">
+          <h6 class="dropdown-header">
+            {{ user.getDisplayName() }}
+          </h6>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{{sitemap.profile}}">设置</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{{sitemap.logout}}">退出</a>
+        </div>
+      </div>
     
-          <div class="dropdown-menu dropdown-menu-right">
-            <h6 class="dropdown-header">{{ user.getDisplayName() }}</h6>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{{sitemap.profile}}">设置</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{{sitemap.logout}}">退出</a>
-          </div>
-        </li>
-    
-        <li class="nav-item d-sm-none">
-          <a class="nav-link" href="{{sitemap.profile}}">myFT</a>
-        </li>
-      </ul>
-    
-      <button class="o-toggler d-sm-none" type="button" data-toggle="collapse" data-target="#sidebarNav" aria-controls="#sidebarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false"><title>Menu</title><path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path></svg>
-      </button>
+      
       {% else %}
-      <ul class="navbar-nav"> 
-        <li class="nav-item">
-          <a class="nav-link" href="{{sitemap.login}}">登录</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{sitemap.signup}}">注册</a>
-        </li>
-      </ul>
+      <div class="navbar-nav flex-row"> 
+        <a class="nav-item nav-link" href="{{sitemap.profile}}">MyFT</a>
+      </div>
+
       {% endif %}
     </div>
   </header>
+
+
+  {% if user and user.email and (not user.isVerified) %}
+    <div class="alert alert-primary mb-0" role="alert">
+      <div class="container">
+        <span>请验证您的登录邮箱。没有收到验证邮件？</span>
+        <form
+          class="d-inline"
+          action="{{sitemap.requestVerification}}"
+          method="post">
+          <button
+            data-disable-with="正在发送..."
+            class="btn btn-link text-teal p-0">重新发送</button>
+        </form>
+      </div>
+    </div>
+  {% endif %}
 
   <main class="page-content" role="main">
     <div class="container">
@@ -76,29 +99,25 @@
       {% endif %}
 
       {% block main %}
-        {% if user and user.email and (not user.isVerified) %}
-          <div class="alert alert-primary m-0" role="alert">
-            <span>请验证您的登录邮箱。没有收到验证邮件？</span>
-            <form
-              class="d-inline"
-              action="{{sitemap.requestVerification}}"
-              method="post">
-              <button
-                data-disable-with="正在发送..."
-                class="btn btn-link text-teal p-0">重新发送</button>
-            </form>
-          </div>
-        {% endif %}
-
+        
         <div class="row">
           <div class="col-sm-3">
-            <div class="collapse d-sm-block mt-3" id="sidebarNav">
-              <nav class="nav flex-column">
+            <div id="sidebarNav" class="collapse d-sm-block">
+              <button class="o-toggle" 
+                type="button" 
+                data-toggle="collapse" 
+                data-target="#sidebarNav" 
+                aria-controls="#sidebarNav" 
+                aria-expanded="false" 
+                aria-label="Toggle navigation">
+        
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024" height="40" with="40"><path fill="#fff" d="M697.4 759.2l61.8-61.8L573.8 512l185.4-185.4-61.8-61.8L512 450.2 326.6 264.8l-61.8 61.8L450.2 512 264.8 697.4l61.8 61.8L512 573.8z"/></svg>
+              </button>
+
+              <nav class="nav flex-column pt-3">
                 {% for item in sideNav %}
                   <a class="nav-link{% if item.active %} active{% endif %}" href="{{item.href}}">{{item.text}}</a>
                 {% endfor %}
-                  <a class="nav-link d-sm-none" href="{{sitemap.profile}}">{{user.name}}</a>
-                  <a class="nav-link d-sm-none" href="{{sitemap.logout}}">退出</a>
               </nav>
             </div>
             
