--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -25,17 +25,6 @@
 <body>
   <header class="navbar o-header">
     <div class="container justify-content-between">
-      
-      <button class="o-toggle" 
-        type="button" 
-        data-toggle="collapse" 
-        data-target="#sidebarNav" 
-        aria-controls="#sidebarNav" 
-        aria-expanded="false" 
-        aria-label="Toggle navigation">
-
-        <svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" height="40" width="40" preserveAspectRatio="none"><title>Menu</title><path d="M768 306.2V383H256v-76.8h512zM256 536.6h512v-76.8H256v76.8zm0 153.6h512v-76.8H256v76.8z" fill-rule="evenodd"/></svg>
-      </button>
 
       <a class="navbar-brand" href="http://www.ftchinese.com" target="__blank">FT中文网</a>
 
@@ -58,13 +47,17 @@
           <a class="dropdown-item" href="{{sitemap.logout}}">退出</a>
         </div>
       </div>
-    
-      
-      {% else %}
-      <div class="navbar-nav flex-row"> 
-        <a class="nav-item nav-link" href="{{sitemap.profile}}">MyFT</a>
-      </div>
 
+      <button class="o-toggle" 
+        type="button" 
+        data-toggle="collapse" 
+        data-target="#sidebarNav" 
+        aria-controls="#sidebarNav" 
+        aria-expanded="false" 
+        aria-label="Toggle navigation">
+
+        <svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" height="40" width="40" preserveAspectRatio="none"><title>Menu</title><path d="M768 306.2V383H256v-76.8h512zM256 536.6h512v-76.8H256v76.8zm0 153.6h512v-76.8H256v76.8z" fill-rule="evenodd"/></svg>
+      </button>
       {% endif %}
     </div>
   </header>
@@ -115,9 +108,13 @@
               </button>
 
               <nav class="nav flex-column pt-3">
+                <a class="nav-link d-block d-sm-none" href="{{sitemap.profile}}">{{ user.getDisplayName() }}</a>
+
                 {% for item in sideNav %}
-                  <a class="nav-link{% if item.active %} active{% endif %}" href="{{item.href}}">{{item.text}}</a>
+                  <a class="nav-link{% if item.active %} active{% endif %}{% if item.desktopOnly %} d-none d-sm-block{% endif %}" href="{{item.href}}">{{item.text}}</a>
                 {% endfor %}
+
+                <a class="nav-link d-block d-sm-none" href="{{sitemap.logout}}">退出</a>
               </nav>
             </div>
             
@@ -144,7 +141,7 @@
     <div class="container">
       <div class="row">
         {% for group in env.footer %}
-          <div class="col-sm-6 col-md-3 col-lg-2">
+          <div class="col-6 col-md-3 col-lg-2">
   
             <h6 class="o-footer__matrix-title">{{group.title}}</h6>
             <div class="o-footer__matrix-content">
