--- a/client/scss/_nav.scss
+++ b/client/scss/_nav.scss
@@ -1,13 +1,51 @@
-.nav-link {
-  position: relative;
+#sidebarNav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: $color-black90;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  text-align: right;
+  
+  .nav-link {
+    color: #fff;
+    border-bottom: 1px solid $color-black80;
+  }
+}
 
-  &.active:after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 4px;
-    height: 100%;
-    background-color: $color-teal40;
+@include media-breakpoint-up(sm) {
+  #sidebarNav {
+    position: static;
+    top: auto;
+    left: auto;
+    background-color: inherit;
+    width: auto;
+    height: auto;
+    z-index: auto;
+    
+    .o-toggle {
+      display: none;
+    }
+    .nav-link {
+      color: $color-teal;
+      text-align: left;
+      position: relative;
+      border-bottom: 0;
+
+      &.active:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 4px;
+        height: 100%;
+        background-color: $color-teal40;
+      }
+    }
+
+    .nav-link:hover {
+      color: $color-black70;
+    }
   }
 }
