fix: replece id selector in media query with class selector due to conflict with nunjucks comment

--- a/client/scss/_nav.scss
+++ b/client/scss/_nav.scss
@@ -1,4 +1,4 @@
-#sidebarNav {
+.o-header__drawer {
   position: fixed;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@
 }
 
 @include media-breakpoint-up(sm) {
-  #sidebarNav {
+  .o-header__drawer {
     position: static;
     top: auto;
     left: auto;
