--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -49,8 +49,8 @@
       <button class="o-toggle" 
         type="button" 
         data-toggle="collapse" 
-        data-target="#sidebarNav" 
-        aria-controls="#sidebarNav" 
+        data-target="#o-header-drawer" 
+        aria-controls="#o-header-drawer" 
         aria-expanded="false" 
         aria-label="Toggle navigation">
 
@@ -93,7 +93,7 @@
         
         <div class="row">
           <div class="col-sm-3">
-            <div id="sidebarNav" class="collapse d-sm-block">
+            <div id="o-header-drawer" class="collapse d-sm-block o-header__drawer">
 
               <div class="pt-2">
                 <button class="o-toggle" 
