fix: collapse target id

--- a/view/layouts/base.html
+++ b/view/layouts/base.html
@@ -99,8 +99,8 @@
                 <button class="o-toggle" 
                   type="button" 
                   data-toggle="collapse" 
-                  data-target="#sidebarNav" 
-                  aria-controls="#sidebarNav" 
+                  data-target="#o-header-drawer" 
+                  aria-controls="#o-header-drawer" 
                   aria-expanded="false" 
                   aria-label="Toggle navigation">
           
