refactor: create different base layouts based on usage

--- a/view/layouts/center.html
+++ b/view/layouts/center.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/two-cols.html" %}
 
 {# This file is mostly used for situations when used has not logged in yet. #}
 {# Occasionaly it is also used when user already logged in, e.g., user forgot password after log in. #}
