--- a/view/account/deny-merge.html
+++ b/view/account/deny-merge.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/two-cols.html" %} 
 
 {% block content %}
 <h2 class="mt-3 mb-5">绑定账号失败</h2>
