--- a/view/account/email-exists.html
+++ b/view/account/email-exists.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/two-cols.html" %} 
 
 {% block content %}
   <h2 class="mt-3 mb-5">绑定FT中文网账号</h2>
