--- a/view/error.html
+++ b/view/error.html
@@ -1,4 +1,5 @@
-{% extends "layouts/base.html" %}
+{% extends "layouts/jumbotron.html" %}
+
 {% block main %}
 <div class="container">
   <div class="jumbotron">
