--- a/view/subscription/wxpay-qr.html
+++ b/view/subscription/wxpay-qr.html
@@ -1,4 +1,4 @@
-{% extends "layouts/base.html" %} 
+{% extends "layouts/two-cols.html" %} 
 
 {% block content %}
   <div class="row justify-content-center mt-3">
