--- a/view/error.html
+++ b/view/error.html
@@ -1,14 +1,14 @@
-{% extends "layouts/jumbotron.html" %}
+{% extends "layouts/base.html" %}
 
 {% block main %}
-<div class="container">
-  <div class="jumbotron">
-      <h1>{{error.status}}</h1>
-      <p>{{error.message}}</p>
-      {% if not env.isProduction %}
-        <pre>{{error.stack}}</pre>
-      {% endif %}
-  </div>
+
+<div class="jumbotron">
+  <h1>{{error.status}}</h1>
+  <p>{{error.message}}</p>
+
+  {% if not env.isProduction %}
+    <pre>{{error.stack}}</pre>
+  {% endif %}
 </div>
 
 {% endblock %}
