fix: inherit from base.html

--- a/view/layouts/center.html
+++ b/view/layouts/center.html
@@ -1,7 +1,6 @@
-{% extends "layouts/two-cols.html" %}
+{% extends "layouts/base.html" %}
 
 {# This file is mostly used for situations when used has not logged in yet. #}
-{# Occasionaly it is also used when user already logged in, e.g., user forgot password after log in. #}
 
 {% block main %}
   <div class="row justify-content-center">
