fix: not showing btn status

--- a/view/layouts/two-cols.html
+++ b/view/layouts/two-cols.html
@@ -23,8 +23,9 @@
           action="{{sitemap.requestVerification}}"
           method="post">
           <button
+            type="submit"
             data-disable-with="正在发送..."
-            class="btn btn-link text-teal p-0">重新发送</button>
+            class="btn btn-link p-0">重新发送</button>
         </form>
       </div>
     </div>
