feat: add state to authorize button

--- a/view/authorize.html
+++ b/view/authorize.html
@@ -19,11 +19,17 @@
       <div class="d-flex justify-content-around">
         <form action="" method="post">
           <input type="hidden" name="approve" value="true">
-          <button class="btn btn-primary">确认</button>
+          <button 
+            type="submit"
+            class="btn btn-primary"
+            data-disable-with="授权..."
+            >确认</button>
         </form>
         <form action="" method="post">
           <input type="hidden" name="approve" value="false">
-          <button class="btn btn-outline-secondary">取消</button>
+          <button
+            type="submit"
+            class="btn btn-outline-secondary">取消</button>
         </form>
       </div>
   </div>
