--- a/view/subscription/membership.html
+++ b/view/subscription/membership.html
@@ -38,7 +38,11 @@
         <a href="{{ sitemap.subs }}/orders">订单历史</a>
       </div>
     {% else %}
-      <h2>订阅FT中文网会员</h2>
+      <div class="d-flex justify-content-between">
+        <h2>订阅FT中文网会员</h2>
+        <a class="btn btn-link" href="{{ sitemap.redeem }}">有礼品卡？</a>
+      </div>
+      
       <div class="container">
         <div class="row">
           <div class="col-12 pt-3 pb-3">
