--- a/view/subscription/membership.html
+++ b/view/subscription/membership.html
@@ -40,7 +40,7 @@
     {% else %}
       <div class="d-flex justify-content-between">
         <h2>订阅FT中文网会员</h2>
-        <a class="btn btn-link" href="{{ sitemap.redeem }}">有礼品卡？</a>
+        {# <a class="btn btn-link" href="{{ sitemap.redeem }}">有礼品卡？</a>#}
       </div>
       
       <div class="container">
