--- a/view/subscription/pay.html
+++ b/view/subscription/pay.html
@@ -22,7 +22,7 @@
       <div class="card">
         <div class="card-header">请选择支付方式</div>
         <div class="card-body">
-          <form action="{{ sitemap.payment(plan.tier, plan.cycle) }}" method="post">
+          <form action="{{ sitemap.payment(plan.tier, plan.cycle) }}{% if sandbox %}?sandbox=true{% endif %}" method="post">
             
             <div class="form-check mb-3">
               <input 
