fix: wrong template path

--- a/view/layouts/pay-done.html
+++ b/view/layouts/pay-done.html
@@ -1,4 +1,4 @@
-{% extends "layout/two-cols.html" %}
+{% extends "layouts/two-cols.html" %}
 
 {% block content %}
 
@@ -21,7 +21,7 @@
       {% endif %}
 
       <p class="text-center">
-        <a class="btn btn-primary" href="{{ redirectTo }}">返回</a>
+        <a class="btn btn-primary" href="{{ sitemap.subs }}">返回</a>
       </p>
 
     </div>
