feat: show payent result

--- a/view/subscription/alipay-done.html
+++ b/view/subscription/alipay-done.html
@@ -4,7 +4,7 @@
 
 {% if result %}
 <table class="table">
-  <caption>支付宝支付结果</caption>
+  <caption class="text-center">支付宝支付结果</caption>
   <thead>
     <tr>
       <th scope="row">订单号</th>
