--- a/view/subscription/orders.html
+++ b/view/subscription/orders.html
@@ -8,7 +8,7 @@
 
   {% for order in orders %}
   <table class="table table-sm">
-    <caption>收据</caption>
+    <caption class="text-right">收据</caption>
     <thead>
       <tr>
         <th scope="row">订单ID</th>
