--- a/view/layouts/pay-done.html
+++ b/view/layouts/pay-done.html
@@ -4,27 +4,18 @@
 
   <h5 class="text-center mt-3">感谢您订阅FT中文网会员</h5>
 
-  <div class="row justify-content-center">
-    <p>{{ subs.tier | localize}}/{{ subs.cycle | localize }}</p>
-  </div>
+  <p class="text-center">{{ subs.tier | localize}}/{{ subs.cycle | localize }}</p>
 
-  <div class="row justify-content-center">
+  {% block payResult %}{% endblock %}
 
-    <div class="col-sm-6">
+  {% if result %}
+    <p>您可以打印本页以备日后查询，或者在<a href="{{ nextUser.subs }}">用户中心</a>查看会员状态和订单历史。</p>
+  {% else %}
+    <p>暂时未查询到支付结果，您可以前往<a href="{{ nextUser.subs }}">用户中心</a>查看会员状态和订单历史。</p>
+  {% endif %}
 
-      {% block payResult %}{% endblock %}
-
-      {% if result %}
-        <p>您可以打印本页以备日后查询，或者在<a href="{{ nextUser.subs }}">用户中心</a>查看会员状态和订单历史。</p>
-      {% else %}
-        <p>暂时未查询到支付结果，您可以前往<a href="{{ nextUser.subs }}">用户中心</a>查看会员状态和订单历史。</p>
-      {% endif %}
-
-      <p class="text-center">
-        <a class="btn btn-primary" href="{{ sitemap.subs }}">返回</a>
-      </p>
-
-    </div>
-  </div>
+  <p class="text-center">
+    <a class="btn btn-primary" href="{{ sitemap.subs }}">返回</a>
+  </p>
 
 {% endblock %}
