--- a/view/subscription/pay.html
+++ b/view/subscription/pay.html
@@ -43,11 +43,11 @@
                 class="form-check-input" 
                 type="radio" 
                 name="payMethod" 
-                id="wechat" 
-                value="wechat">
+                id="wxpay" 
+                value="wxpay">
               <label 
                 class="form-check-label d-block" 
-                for="wechat">
+                for="wxpay">
                 <img src="http://www.ftacademy.cn/images/wxpay-113x24.png" alt="微信支付">
               </label>
             </div>
