fix: sitmap path

--- a/view/subscription/wxpay-qr.html
+++ b/view/subscription/wxpay-qr.html
@@ -25,7 +25,7 @@
         <div class="mt-1">
             <small>微信 -> 发现 -> 扫一扫</small>
         </div>
-        <a href="{{ sitemap.subs }}">支付完成？返回</a>
+        <a href="{{ sitemap.wxpayDone }}">支付完成？</a>
         <p class="mt-2 text-muted">
           <small>注：由于微信支付技术上的限制，此处购买FT会员仅能支持扫码支付。如果您需要在移动设备上购买，请安装FT中文网APP。</small>
         </p>
