--- a/view/account/account.html
+++ b/view/account/account.html
@@ -22,9 +22,10 @@
     <div class="mt-3 pb-3 mb-3">
       <h5 class="pb-2 border-bottom">账号绑定</h5>
       <div class="d-flex justify-content-between">
-        <span>微信</span>
-        {% if user.isCoupled() %}
-          <span>已绑定 {{ user.wechat.nickname }}</span>
+        <span class="mr-auto">微信</span>
+        {% if user.isLinked() %}
+          <span class="pl-2 pr-2">已绑定 {{ user.wechat.nickname }}</span>
+          <a class="pl-2 pr-2" href="{{ sitemap.unlinkWx }}">解除绑定</a>
         {% else %}
           <a href="{{ sitemap.wxLogin }}">尚未绑定</a>
         {% endif %}
