--- a/view/signup.html
+++ b/view/signup.html
@@ -46,7 +46,7 @@
       data-disable-with="正在注册...">注册</button>
   
   </form>
-  <small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small>
+  <p class="text-center"><small class="">注册即代表您同意FT中文网<a href="http://www.ftchinese.com/m/corp/service.html" target="_blank">《用户注册协议》</a></small></p>
   
   <p class="text-center">已有账号？<a href="{{sitemap.login}}">登录</a></p>
 </div>
