--- a/views/forgot-password/new-password.html
+++ b/views/forgot-password/new-password.html
@@ -4,32 +4,15 @@
 <div class="mt-4">
   <h4 class="text-center">更改 {{email}} 的密码</h4>
 
-  <form method="post">
-    <div class="form-group">
-      <label for="password">密码</label>
-      <input class="form-control"
-        id="password"
-        type="password"
-        name="password"
-        required>
-      
-      {% if errors.password %}
-        <div class="form-errortext">{{errors.password}}</div>
-      {% endif %}
-    </div>
-    <div class="form-group">
-      <label for="confirmPassword">再次输入确认</label>
-      <input class="form-control"
-        id="confirmPassword"
-        type="password"
-        name="confirmPassword"
-        required>
-      <small class="form-text text-muted">请确保两次输入的密码一致</small>
-      {% if errors.confirmPassword %}
-        <div class="form-errortext">{{errors.confirmPassword}}</div>
-      {% endif %}
+  {# Show invalid token message #}
+  {% include "partials/alert-danger.html" %}
 
-    </div>
+  <form method="post">
+
+    {% for input in inputs %}
+      {% include "partials/input.html" %}
+    {% endfor %}
+    
     <button 
       class="btn btn-primary btn-block" 
       type="submit"
