--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -56,7 +56,7 @@
   <main class="page-content" role="main">
     <div class="container">
       
-      {% if errors.message %}
+      {% if errors %}
         <div class="alert alert-danger alert-dismissible fade show mt-3" role="alert">
           <span>{{errors.message}}</span>
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
