--- a/views/layouts/two-cols.html
+++ b/views/layouts/two-cols.html
@@ -65,14 +65,8 @@
     </div>
 
     <div class="col-sm-9">
-      {% if alert %}
-        <div class="alert alert-success alert-dismissible fade show mt-3" role="alert">
-          <span>{{ alert.key | showAlert }}</span>
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-      {% endif %}
+      {% include "partials/alert-success.html" %}
+      
       {% block content %}{% endblock %}
     </div>
   </div>
