--- a/views/signup.html
+++ b/views/signup.html
@@ -3,6 +3,10 @@
 {% block content %}
 <div class="mt-4">
   <h4 class="text-center">创建FT中文网账号</h4>
+
+  {# Show too many requests error #}
+  {% include "partials/alert-danger.html" %}
+
   <form method="post">
   
     {% for input in form.inputs %}
