--- a/views/forgot-password/new-password.html
+++ b/views/forgot-password/new-password.html
@@ -10,7 +10,9 @@
   <form method="post">
 
     {% for input in inputs %}
-      {% include "partials/input.html" %}
+      <div class="form-group">
+        {% include "partials/input-base.html" %}
+      </div>
     {% endfor %}
     
     <button 
