--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,9 @@
   <form method="post" id="loginForm">
 
     {% for input in form.inputs %}
-      {% include "partials/input.html" %}
+      <div class="form-group">
+        {% include "partials/input-base.html" %}
+      </div>
     {% endfor %}
 
     <div class="form-check clearfix">
