--- a/views/profile/address.html
+++ b/views/profile/address.html
@@ -3,88 +3,26 @@
 {% block content %}
 
   <div class="mt-3">
+    <h5>地址</h5>
+
+    {% include "partials/alert-danger.html" %}
+
     <form method="post">
-      <div class="form-group">
-        <label for="country">国家</label>
-        <input class="form-control"
-        id="country"
-        type="text" 
-        name="address[country]" 
-        value="{{address.country}}">
-  
-        {% if errors.country %}
-          <div class="form-errortext">{{errors.country}}</div>
-        {% endif %}
-      </div>
 
-      <div class="form-row">
-        <div class="form-group col-md-4">
-          <label for="province">省/直辖市</label>
-          <input type="text"
-          id="province"
-          class="form-control"
-          name="address[province]"
-          value="{{address.province}}">
-
-          {% if errors.province %}
-            <div class="form-errtext">{{errors.province}}</div>
-          {% endif %}
+      {% for row in formRows %}
+        <div class="form-row">
+          {% for input in row %}
+            <div class="form-group
+            {% if input.col %}
+              col-md-{{ input.col }}
+            {% else %}
+              col-12
+            {% endif %}">
+              {% include "partials/input-base.html" %}
+            </div>
+          {% endfor %}
         </div>
-        
-        <div class="form-group col-md-4">
-          <label for="city">市</label>
-          <input type="text"
-            id="city"
-            class="form-control"
-            name="address[city]"
-            value="{{address.city}}">
-
-          {% if errors.city %}
-            <div class="form-errtext">{{errors.city}}</div>
-          {% endif %}
-        </div>
-
-        <div class="form-group col-md-4">
-          <label for="district">区/县</label>
-          <input type="text"
-            id="district"
-            class="form-control"
-            name="address[district]"
-            value="{{address.district}}">
-
-          {% if errors.district %}
-            <div class="form-errtext">{{errors.district}}</div>
-          {% endif %}
-        </div>
-      </div>
-
-      <div class="form-row">
-        <div class="form-group col-md-10">
-          <label for="street">街道</label>
-          <input type="text"
-          id="street"
-          class="form-control"
-          name="address[street]"
-          value="{{address.street}}">
-
-          {% if errors.street %}
-            <div class="form-errtext">{{errors.street}}</div>
-          {% endif %}
-        </div>
-
-        <div class="form-group col-md-2">
-          <label for="postcode">邮编</label>
-          <input type="text"
-          id="postcode"
-          class="form-control"
-          name="address[postcode]"
-          value="{{address.postcode}}">
-
-          {% if errors.postcode %}
-            <div class="form-errtext">{{errors.postcode}}</div>
-          {% endif %}
-        </div>
-      </div>
+      {% endfor %}
       
       <button
         type="submit"
