--- a/views/profile/profile.html
+++ b/views/profile/profile.html
@@ -21,13 +21,13 @@
     <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
       <span class="mr-auto">用户名</span>
       <span class="pl-2 pr-2">{{profile.userName}}</span>
-      <a href="{{ sitemap.displayName }}" class="pl-2 pr-2">修改</a>
+      <a href="{{ profile.updateNameLink }}" class="pl-2 pr-2">修改</a>
     </div>
 
     <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
       <span class="mr-auto">手机号码</span>
       <span class="pl-2 pr-2">{{profile.mobile}}</span>
-      <a href="{{ sitemap.mobile }}" class="pl-2 pr-2">修改</a>
+      <a href="{{ profile.updateMobileLink }}" class="pl-2 pr-2">修改</a>
     </div>
 
     <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
@@ -39,7 +39,7 @@
 
           <div class="d-flex justify-content-between mb-3">
             <span>性别</span>
-            <span class="pl-2">{{ profile.gender | localize }}</span>
+            <span class="pl-2">{{ profile.genderCN }}</span>
           </div>
 
           <div class="d-flex justify-content-between">
@@ -47,7 +47,7 @@
             <span class="pl-2">{{profile.birthday}}</span>
           </div>
       </div>
-      <a href="{{ sitemap.personal }}" class="align-self-center pl-2 pr-2">修改</a>
+      <a href="{{ profile.updateInfoLink }}" class="align-self-center pl-2 pr-2">修改</a>
     </div>
 
     <div class="d-flex justify-content-between">
@@ -66,7 +66,7 @@
             <span>{{address.postcode}}</span>
         </div>
       </div>
-      <a href="{{ sitemap.address }}" class="pl-2 pr-2">修改</a>
+      <a href="{{ address.updateLink }}" class="pl-2 pr-2">修改</a>
     </div>
   </div>
   {% endif %}
