refactor: ui data structure

--- a/views/login.html
+++ b/views/login.html
@@ -8,7 +8,7 @@
 
   <form method="post" id="loginForm">
 
-    {% for input in form.inputs %}
+    {% for input in inputs %}
       <div class="form-group">
         {% include "partials/input-base.html" %}
       </div>
