--- a/views/signup.html
+++ b/views/signup.html
@@ -9,7 +9,7 @@
 
   <form method="post">
   
-    {% for input in form.inputs %}
+    {% for input in inputs %}
       <div class="form-group">
         {% include "partials/input-base.html" %}
       </div>
