--- a/views/account/account.html
+++ b/views/account/account.html
@@ -6,7 +6,29 @@
       {% include "partials/pls-bind.html" %}
     </div>
   {% else %}
-    <div class="mt-3 pb-3 mb-3">
+
+    {% for section in sections %}
+      <div class="mt-3 pb-3 mb-3">
+        {% if section.heading %}
+          <h5 class="pb-2 border-bottom">{{ section.heading }}</h5>
+        {% endif %}
+
+        {% for item in section.items %}
+        <div class="d-flex justify-content-between mb-3 pb-3{% if not loop.last %} border-bottom{% endif %}">
+            <span class="mr-auto">{{ item.label }}</span>
+
+            {% if item.value %}
+              <span class="pl-2 pr-2">{{ item.value }}</span>
+            {% endif %}
+
+            <a href="{{ item.link }}" class="pl-2 pr-2">{{ item.linkText if item.linkText else "修改" }}</a>
+        </div>
+        {% endfor %}
+
+      </div>
+    {% endfor %}
+
+    {# <div class="mt-3 pb-3 mb-3">
       <div class="d-flex justify-content-between mb-3 pb-3 border-bottom">
         <span class="mr-auto">登录邮箱</span>
         <span class="pl-2 pr-2">{{account.email}}</span>
@@ -30,6 +52,6 @@
           <a href="{{ sitemap.wxLogin }}">尚未绑定</a>
         {% endif %}
       </div>
-    </div>
+    </div>#}
   {% endif %}
 {% endblock %}
