--- a/views/account/password.html
+++ b/views/account/password.html
@@ -5,46 +5,13 @@
   <section class="mt-3">
     <h5>更改密码</h5>
 
-    <form method="post" action="{{sitemap.password}}">
-      <div class="form-group">
-        <label for="oldPassword">当前密码</label>
-        <input type="password"
-          class="form-control"
-          id="oldPassword"
-          name="oldPassword"
-          required>
-    
-        {% if errors.oldPassword %}
-          <div class="form-errortext">{{errors.oldPassword}}</div>
-        {% endif %}
-      </div>
-    
-      <div class="form-group">
-        <label for="password">新密码</label>
-        <input type="password"
-          class="form-control"
-          id="password"
-          name="password"
-          required>
-        <small class="form-text text-muted">最少8个字符，不能使用空格、表情符号</small>
-    
-        {% if errors.password %}
-          <div class="form-errortext">{{errors.password}}</div>
-        {% endif %}
-      </div>
-    
-      <div class="form-group">
-        <label for="confirmPassword">再次输入新密码</label>
-        <input type="password"
-          class="form-control"
-          id="confirmPassword"
-          name="confirmPassword"
-          required>
-    
-        {% if errors.confirmPassword %}
-          <div class="form-errortext">{{errors.confirmPassword}}</div>
-        {% endif %}
-      </div>
+    <form method="post">
+
+      {% for input in inputs %}
+        <div class="form-group">
+            {% include "partials/input-base.html" %}
+        </div>
+      {% endfor %}
       
       <div class="d-flex justify-content-between">
         <button
@@ -52,7 +19,7 @@
           data-disable-with="保存..."
           class="btn btn-primary">保存密码</button>
 
-        <a href="{{sitemap.passwordReset}}" target="_blank">忘记密码？</a>
+        <a href="{{ passwordResetLink }}" target="_blank">忘记密码？</a>
       </div>
       
     </form>    
