--- a/views/account/update-email.html
+++ b/views/account/update-email.html
@@ -2,21 +2,13 @@
 
 {% block content %}
 
-  <section class="mt-3 pb-3 mb-3 border-bottom">
+  <section class="mt-3 pb-3 mb-3">
 
     <h5>登录邮箱</h5>
     <form method="post">
+      
       <div class="form-group">
-        <input class="form-control"
-        id="email"
-        type="email" 
-        name="email" 
-        value="{{email}}"
-        required>
-  
-        {% if errors.email %}
-          <div class="form-errortext">{{errors.email}}</div>
-        {% endif %}
+        {% include "partials/input-base.html" %}
       </div>
   
       <button
