refactor: rename pls-bind to urge-link

--- a/views/profile/profile.html
+++ b/views/profile/profile.html
@@ -11,7 +11,7 @@
         <figcaption class="figure-caption">{{ user.wechat.nickname }}</figcaption>
       </figure>
     
-      {% include "partials/pls-bind.html" %}
+      {% include "partials/urge-link.html" %}
 
     </div>
   </div>
