--- a/views/account/account.html
+++ b/views/account/account.html
@@ -3,7 +3,7 @@
 {% block content %}
   {% if user.isWxOnly() %}
     <div class="mt-3 text-center">
-      {% include "partials/pls-bind.html" %}
+      {% include "partials/urge-link.html" %}
     </div>
   {% else %}
 
