--- a/views/partials/paging.html
+++ b/views/partials/paging.html
@@ -1,13 +1,21 @@
 <div class="row justify-content-between">
-    <div class="col-auto">
-        {% if paging.page > 1 %}
-        <a href="?page={{paging.page - 1}}">上一页</a>
-        {% endif %}
-    </div>
+  <div class="col-auto">
+    {% if paging.page > 1 %}
+      <a href="?page={{paging.page - 1}}">上一页</a>
+    {% endif %}
 
-    <div class="col-auto">
-        {% if paging.listSize >= paging.per_page %}
-        <a href="?page={{paging.page + 1}}">下一页</a>
-        {% endif %}
-    </div>
+    {% if paging.showPrevious() %}
+      <a href="?page={{paging.page - 1}}">上一页</a>
+    {% endif %}
+  </div>
+
+  <div class="col-auto">
+    {% if paging.listSize >= paging.per_page %}
+      <a href="?page={{ paging.previousPage }}">下一页</a>
+    {% endif %}
+
+    {% if paging.showNext() %}
+      <a href="?page={{ paging.nextPage }}">下一页</a>
+    {% endif %}
+  </div>
 </div>
