--- a/views/starred.html
+++ b/views/starred.html
@@ -7,7 +7,7 @@
       <div class="mt-3 text-center">
         <p>绑定FT中文网账号后可以收藏文章</p>
       
-        <a class="btn btn-primary" href="{{ sitemap.bindEmail }}">绑定账号</a>
+        <a class="btn btn-primary" href="{{ user.linkFtc }}">绑定账号</a>
       </div>
     </div>
   {% else %}
@@ -15,15 +15,15 @@
       {% for article in articles %}
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title"><a href="http://www.ftchinese.com/story/{{article.id}}" target="__blank">{{article.title}}</a></h5>
+            <h5 class="card-title"><a href="{{ article.originalUrl }}" target="__blank">{{article.title}}</a></h5>
             <p>{{article.standfirst}}</p>
             <div>
-                更新于 <time datetime="{{article.updatedAt}}">{{ article.updatedAt | toCST }}</time>
+                更新于 <time datetime="{{article.updatedAt}}">{{ article.updatedCST }}</time>
             </div>
           </div>
           <div class="card-footer d-flex justify-content-between">
-            <span>收藏于 <time datetime="{{article.starredAt}}">{{ article.starredAt | toCST }}</time></span>
-            <form action="{{sitemap.starred}}/{{article.id}}/delete" method="post">
+            <span>收藏于 <time datetime="{{ article.starredAt }}">{{ article.starredCST }}</time></span>
+            <form action="{{ article.deleteUrl }}" method="post">
               <button class="btn btn-outline-primary py-0">删除</button>
             </form>
           </div>
