--- a/views/verification/email.html
+++ b/views/verification/email.html
@@ -5,19 +5,11 @@
   <h4 class="text-center">邮箱验证</h4>
 
     <div class="text-center">
-      {% if success %}
-      邮箱已验证！
-      {% else %}
-      邮箱验证失败！
-      {% endif %}
+      {{ message }}
     </div>
   
     <div class="text-center">
-      {% if user %}
-        <a href="{{ sitemap.account }}">返回</a>
-      {% else %}
-        <a href="{{sitemap.login }}">登录</a>
-      {% endif %}
+      <a href="{{ link.href }}">{{ link.text }}</a>
     </div>
 
 </div>
