refactor: rename input-base.html to text-input.html

--- a/views/account/update-email.html
+++ b/views/account/update-email.html
@@ -8,7 +8,7 @@
     <form method="post">
       
       <div class="form-group">
-        {% include "partials/input-base.html" %}
+        {% include "partials/text-input.html" %}
       </div>
   
       <button
