--- a/views/profile/address.html
+++ b/views/profile/address.html
@@ -18,7 +18,7 @@
             {% else %}
               col-12
             {% endif %}">
-              {% include "partials/input-base.html" %}
+              {% include "partials/text-input.html" %}
             </div>
           {% endfor %}
         </div>
