--- a/views/account/login.html
+++ b/views/account/login.html
@@ -15,7 +15,7 @@
 
         {% for input in inputs %}
           <div class="form-group">
-            {% include "partials/input-base.html" %}
+            {% include "partials/text-input.html" %}
           </div>
         {% endfor %}
         
