--- a/views/account/password.html
+++ b/views/account/password.html
@@ -9,7 +9,7 @@
 
       {% for input in inputs %}
         <div class="form-group">
-            {% include "partials/input-base.html" %}
+            {% include "partials/text-input.html" %}
         </div>
       {% endfor %}
       
