--- a/views/account/signup.html
+++ b/views/account/signup.html
@@ -11,7 +11,7 @@
       <form method="post">
         {% for input in inputs %}
           <div class="form-group">
-            {% include "partials/input-base.html" %}
+            {% include "partials/text-input.html" %}
           </div>
         {% endfor %}
       
