--- a/views/forgot-password/enter-email.html
+++ b/views/forgot-password/enter-email.html
@@ -20,7 +20,7 @@
   <form method="post">
 
       <div class="form-group">
-        {% include "partials/input-base.html" %}
+        {% include "partials/text-input.html" %}
       </div>
 
     <button 
