--- a/views/profile/personal.html
+++ b/views/profile/personal.html
@@ -12,7 +12,7 @@
     <div class="form-row">
       {% for input in form.nameInputs %}
         <div class="form-group col-md-6">
-          {% include "partials/input-base.html" %}
+          {% include "partials/text-input.html" %}
         </div>
       {% endfor %}
 
@@ -28,7 +28,7 @@
     {% if form.birthdayInput %}
       {% set input = form.birthdayInput %}
       <div class="form-group">
-        {% include "partials/input-base.html" %}
+        {% include "partials/text-input.html" %}
       </div>
     {% endif %}
 
