--- a/views/profile/single-input.html
+++ b/views/profile/single-input.html
@@ -11,7 +11,7 @@
   <form method="post">
 
       <div class="form-group">
-        {% include "partials/input-base.html" %}
+        {% include "partials/text-input.html" %}
       </div>
     
     <button 
