--- a/views/signup.html
+++ b/views/signup.html
@@ -11,7 +11,7 @@
   
     {% for input in inputs %}
       <div class="form-group">
-        {% include "partials/input-base.html" %}
+        {% include "partials/text-input.html" %}
       </div>
     {% endfor %}
   
